Updated versions and version metadata.

--- a/task/sonatype/0.1/nexus-lifecycle-scan/nexus-lifecycle-scan-task.yml
+++ b/task/sonatype/0.1/nexus-lifecycle-scan/nexus-lifecycle-scan-task.yml
@@ -2,7 +2,10 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: nexus-lifecycle-scan-task
+  labels:
+    app.kubernetes.io/version: "0.1"
   annotations:
+    tekton.dev/pipelines.minVersion: "0.33.2"
     tekton.dev/categories: Cli, Continuous Integration, Developer Tools, Security
     tekton.dev/tags: sonatype, nexus, iq, sbom
     tekton.dev/displayName: "Sonatype Nexus Lifecycle Scan"
