--- a/task/sonatype/0.1/nexus-lifecycle-scan/nexus-lifecycle-scan-task.yml
+++ b/task/sonatype/0.1/nexus-lifecycle-scan/nexus-lifecycle-scan-task.yml
@@ -107,7 +107,7 @@ spec:
           value: $(params.HELP)
         - name: TARGETS
           value: $(params.TARGETS)
-      image: 'docker.io/sonatype/nexus-iq-cli:latest'
+      image: 'docker.io/sonatype/nexus-iq-cli:1.136.0-01'
       name: ''
       resources: {}
       script: >
